--- a/flex.html
+++ b/flex.html
@@ -6,7 +6,20 @@
     <title>Flex-Box</title>
     <style>
         .container{
-            
+            height: 80vh;
+            width: 60vw;
+            margin: auto;
+            border: 2px solid saddlebrown;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+        .item{
+            height: 200px;
+            width: 200px;
+            border: 1px solid rgb(0, 255, 85);
         }
     </style>
 </head>
